# HIDHelve

./: .gitmodules  CMakeLists.txt  Makefile  README.md
artwork/: HornersHIDHelve.svgz
cmake/: default_c_flags.cmake
examples/windows/: AHKHIDMapper.ahk
include/: hidhelve_log.h  hidhelve_version.h
lib/: buildexternal.cmd  winbuild.bat
lib/cmake/: FindLog4cplus.cmake  FindPion.cmake
src/: CMakeLists.txt  hidhelve.cpp
